Resolved mobile view responsive layout bug

--- a/client/pages/home.css
+++ b/client/pages/home.css
@@ -4,7 +4,7 @@
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -45,7 +45,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 
@@ -114,6 +114,10 @@
 
 /* For screens between 480px and 767px */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+  .content {
+    margin-top: 2rem;
+  }
+
   .header {
     font-size: 2.5rem;
   }
@@ -162,6 +166,10 @@
 
 /* For screens smaller than 480px */
 @media only screen and (max-width: 479px) {
+  .content {
+    margin-top: 2rem;
+  }
+
   .header {
     font-size: 2.5rem;
   }
